fix: refactor layout to fix alignment
removes nested divs, fixes centering in home page and alignment for haiku

refs #1

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -67,18 +67,22 @@ body {
 }
 
 .main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     flex-grow: 1;
 }
 
-.main-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .homepage-header {
     text-align: center;
+}
+
+.homepage-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
 }
 
 .social-links {
